<resources>
    <string name="app_name">Call Your Mother</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="channel_name">Call Reminders</string>
    <string name="channel_description">channel description</string>
    <string name="deleteButton">Delete</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="frequencyText">Reminder Frequency \n(in days)</string>
    <string name="phoneNumberText">Phone Number</string>
    <string name="timeTextView">Time to be reminded</string>
    <string name="nameText">Contact Name</string>
    <string name="default_frequency">1</string>

</resources>